Prepared configuration to pass MSSQL test
git-svn-id: http://svn.arte-consultores.com/svn/arte/istac/metamac/metamac-statistical-operations/trunk/metamac-statistical-operations@51613 05f23f4b-1f0b-0410-ba1b-ad9509270e59